[package]
name = "hisen_desk"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 2 core
tauri = { version = "2", features = [] }

# Serde for command data serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# System info
sysinfo = "0.32"

# Audio devices
cpal = "0.15"

# Network test
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread", "time"] }

[profile.release]
opt-level = 3
